--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "bhjj-timeline",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A Gatsby based timeline of promotions at Buckhead Jiu-Jitsu",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^3.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-json": "^3.14.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-image-timeline": "^3.2.13"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
