sync pics to s3 on deploy

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && aws --profile stuartf s3 sync /home/stuart/media/bhjj s3://bhjj && gh-pages -d public"
   },
   "dependencies": {
     "gatsby": "^3.14.0",
