--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "gatsby": "^3.14.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-json": "^3.14.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-image-timeline": "^3.2.13"
+    "react-image-timeline": "^3.2.13",
+    "react-minimal-pie-chart": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
