--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "deploy": "gatsby build --prefix-paths && aws --profile stuartf s3 sync /home/stuart/media/bhjj s3://bhjj && gh-pages -d public"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.0",
     "gatsby": "^3.14.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-json": "^3.14.0",
     "react": "^16.4.0",
