--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "react-tiny-popover": "^7.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.4.0",
+    "eslint": "^8.4.1",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-react": "^7.27.1",
     "gh-pages": "^3.2.3",
     "prettier": "2.5.1"
