--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-json": "^4.3.0",
+    "magica": "^0.2.17",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
