--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "deploy": "gatsby build --prefix-paths && aws --profile stuartf s3 sync /home/stuart/media/bhjj s3://bhjj && gh-pages -d public"
   },
   "dependencies": {
-    "@fontsource/open-sans": "^4.5.2",
-    "gatsby": "^4.3.0",
-    "gatsby-source-filesystem": "^4.7.0",
-    "gatsby-transformer-json": "^4.3.0",
+    "@fontsource/open-sans": "^4.5.14",
+    "gatsby": "^5.9.1",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-json": "^5.9.0",
     "magica": "^0.2.17",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-image-timeline": "^3.2.13",
-    "react-minimal-pie-chart": "^8.2.0",
-    "react-tiny-popover": "^7.0.1",
-    "spinners-react": "^1.0.6"
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-img-timeline": "^3.2.19",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-tiny-popover": "^7.2.4",
+    "spinners-react": "^1.0.7"
   },
   "devDependencies": {
-    "eslint": "^8.4.1",
+    "eslint": "^8.40.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.27.1",
-    "gh-pages": "^3.2.3",
-    "prettier": "2.5.1"
+    "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
+    "prettier": "2.8.8"
   },
   "repository": {
     "type": "git",
